# WordSwipe

./: .gitignore  README.md
app/: CMakeLists.txt  main.cpp  main.qml  qml.qrc
app/models/: CardsModel.cpp  CardsModel.h  DataController.cpp  DataController.h  FolderModel.cpp  FolderModel.h  ModuleModel.cpp  ModuleModel.h  SessionManager.cpp  SessionManager.h  card.cpp  card.h  folder.cpp  folder.h  module.cpp  module.h
app/utils/: database.cpp  database.h  exportimport.cpp  exportimport.h
